--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 
 VITE_HACKATHON_PASS=tekmakon
+
+VITE_BARCODE_SECRET_KEY=delivery-rider-barcode-key-2025
