--- a/package.json
+++ b/package.json
@@ -30,19 +30,24 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "^2.86.2",
+            "canvas": "^3.2.0",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
+            "crypto-js": "^4.2.0",
             "embla-carousel-react": "^8.6.0",
+            "html5-qrcode": "^2.3.4",
             "input-otp": "^1.4.2",
             "leaflet": "*",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "qr-code-styling": "^1.9.2",
             "qrcode": "^1.5.4",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
+            "react-qr-code": "^2.0.18",
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
@@ -50,6 +55,7 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@types/crypto-js": "^4.2.2",
             "@types/node": "^20.10.0",
             "@types/qrcode": "^1.5.6",
             "@types/react": "^19.2.7",
